// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a collapsed block 1`] = `
<section
  class="block"
>
  <div
    class="handle"
  />
  <div
    class="content"
  >
    <header
      class="header"
    >
      <span
        aria-label="su-angle-down"
        class="su-angle-down"
      />
    </header>
    <article
      class="children"
    >
      Some block content
    </article>
  </div>
</section>
`;

exports[`Render an expanded block with a multiple types 1`] = `
<section
  class="block expanded"
>
  <div
    class="handle"
  >
    <span>
      Test
    </span>
  </div>
  <div
    class="content"
  >
    <header
      class="header"
    >
      <div
        class="types"
      >
        <div
          class="select"
        >
          <button
            class="displayValue default"
            type="button"
          >
            <div
              aria-label="Type1"
              class="croppedText"
              title="Type1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Typ
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  e1
                </span>
              </div>
              <div
                class="whole"
              >
                Type1
              </div>
            </div>
            <span
              aria-label="su-angle-down"
              class="su-angle-down toggle"
            />
          </button>
        </div>
      </div>
      <div
        class="icons"
      >
        <span
          aria-label="su-cog"
          class="su-cog clickable"
          role="button"
          tabindex="0"
        />
        <span
          aria-label="su-angle-up"
          class="su-angle-up clickable"
          role="button"
          tabindex="0"
        />
      </div>
    </header>
    <article
      class="children"
    >
      Some block content
    </article>
  </div>
</section>
`;
